# cheat_editor_manager_tool

./: .gitignore  CLEANUP_PHASE_LOG.md  Cheat_File_Creator_MASTER_EXPLANATION_v1_3_2.txt  MANIFEST.in  README.md  cheat_creator.py  cheat_creator.spec  cheat_editor_manager_tool.py  cheat_editor_manager_tool.spec  profiles.json  pyproject.toml  requirements.txt  user_prefs.json
assets/: README.md  generate_brand_assets.py
cheat_editor_manager/: __init__.py  __main__.py  app.py  app_actions.py  bootstrap.py  constants.py  defaults.py  export_logic.py  profiles.py  resources.py  state.py  storage.py  widgets.py
cheat_editor_manager/services/: export_service.py  file_load_service.py  help_link_service.py  retroarch_core_service.py  template_service.py  theme_service.py
cheat_editor_manager/storage/: __init__.py  prefs_store.py  (+1 more)
docs/: Cheat_File_Creator_MASTER_EXPLANATION_v1_3_2.txt  README.md  REDESIGN_PLAN.md
scripts/: check_dev_environment.py  generate_brand_assets.py
tests/: gui_test_utils.py  test_app_actions.py  test_app_smoke.py  test_assets.py  test_bootstrap.py  test_build_config.py  test_docs.py  test_export_logic.py  test_export_service.py  test_extension_dialog.py  test_file_load_service.py  test_help_link_service.py  test_profile_helpers.py  test_retroarch_core_service.py  test_settings_appearance_page.py  test_settings_dialog.py  test_settings_export_roots_page.py  test_settings_profiles_page.py  test_storage.py  test_template_service.py  test_text_prompt_dialog.py  test_theme_contrast.py  test_ui_cleanup.py  test_ui_workflows.py  test_widgets.py
(+25 files in other folders)
