[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cheat-editor-manager-tool"
version = "1.3.2"
description = "Retro-ready cheat editing and export"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "Pillow>=12.0",
  "tkinterdnd2>=0.4",
]

[project.optional-dependencies]
dev = ["pyinstaller>=6.18", "pytest>=8"]

[project.gui-scripts]
cheat-editor-manager-tool = "cheat_editor_manager.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["cheat_editor_manager*"]
